# DomoticzFairlandModbus

./: LICENSE  base_plugin.py  plugin.py  pyproject.toml
