[tool.poetry]
name = "domoticz_fairland_modbus"
version = "0.1.0"
description = ""
authors = ["NijeboerFrank <frank.nijeboer@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7,<4"
pymodbus = "^2.5.3"
click = "^8.1.3"
prompt-toolkit = "^3.0.29"
Pygments = "^2.12.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
